--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,7 +8,7 @@ body {
          color:aliceblue;
 }
 
-./components/Header/hhh {
+.hhh {
          background-color: black;
-         padding: 20px;
+         padding: 10px;
 }
