--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,3 +12,12 @@ body {
          background-color: black;
          padding: 10px;
 }
+.foto1 {
+         width: 600px;
+         height: 400px;
+         
+}
+.foto2 {
+         width: 400px;
+         height: 230px;
+}
